--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   
   cupertino_icons: ^1.0.2
   http: ^1.1.2
+  fluttertoast: ^8.2.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
